suppression des temoignages

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         <div class="nav-menu" id="nav-menu">
             <a href="#accueil" class="nav-link active">Accueil</a>
             <a href="#packs" class="nav-link">Nos Packs</a>
-            <a href="#temoignages" class="nav-link">Témoignages</a>
+            <!-- <a href="#temoignages" class="nav-link">Témoignages</a> -->
             <a href="#apropos" class="nav-link">À propos</a>
             <a href="#ctaSection" class="nav-link">Contact</a>
         </div>
@@ -361,16 +361,23 @@
 </div>
             </div>
         </div>
+
+  <section class="sur-mesure section">
+    <div class="sur-mesure-bg">
+        <div class="floating-element element-1"></div>
+        <div class="floating-element element-2"></div>
+        <div class="floating-element element-3"></div>
+    </div>
         <div class="packs-custom-section">
             <h3>Envie d'une formule plus personnalisée ?</h3>
             <p>Nous proposons aussi des prestations à la carte, pour créer ensemble la solution qui correspond vraiment à vos besoins.</p>
             <a href="#ctaSection" class="packs-custom-cta">Discuter de mon projet</a>
         </div>
       </div>
-    </section>
+  </section>
 
 <!-- Testimonials Section -->
-<section class="testimonials section" id="temoignages">
+<!-- <section class="testimonials section" id="temoignages">
     <div class="testimonials-bg">
         <div class="floating-element element-1"></div>
         <div class="floating-element element-2"></div>
@@ -453,7 +460,7 @@
             </div>
         </div>
     </div>
-</section>
+</section> -->
 
 <!-- Why Choose Us Section -->
 <section class="why-choose section" id="apropos">
@@ -776,7 +783,7 @@
                     <h3 class="footer-title">Liens Utiles</h3>
                     <ul class="footer-links">
                         <li><a href="#apropos">À propos</a></li>
-                        <li><a href="#temoignages">Témoignages</a></li>
+                        <!-- <li><a href="#temoignages">Témoignages</a></li> -->
                         <!-- <li><a href="#blog">Blog</a></li> -->
                         <li><a href="#faq">FAQ</a></li>
                         <li><a href="./mentions_legales.html">Mentions légales</a></li>
