--- a/mentions_legales.html
+++ b/mentions_legales.html
@@ -160,7 +160,7 @@
           <div class="nav-menu" id="nav-menu">
               <a href="./index.html" class="nav-link">Accueil</a>
               <a href="./index.html#packs" class="nav-link">Nos Packs</a>
-              <a href="./index.html#temoignages" class="nav-link">Témoignages</a>
+              <!-- <a href="./index.html#temoignages" class="nav-link">Témoignages</a> -->
               <a href="./index.html#apropos" class="nav-link">À propos</a>
               <a href="./index.html#ctaSection" class="nav-link">Contact</a>
           </div>
@@ -366,7 +366,7 @@
                     <h3 class="footer-title">Liens Utiles</h3>
                     <ul class="footer-links">
                         <li><a href="./index.html#apropos">À propos</a></li>
-                        <li><a href="./index.html#temoignages">Témoignages</a></li>
+                        <!-- <li><a href="./index.html#temoignages">Témoignages</a></li> -->
                         <!-- <li><a href="./index.html#blog">Blog</a></li> -->
                         <li><a href="./index.html#faq">FAQ</a></li>
                         <li><a href="./index.html#mentions-legales">Mentions légales</a></li>
