--- a/plan_du_site.html
+++ b/plan_du_site.html
@@ -158,7 +158,7 @@
             <div class="nav-menu" id="nav-menu">
                 <a href="index.html" class="nav-link">Accueil</a>
                 <a href="index.html#packs" class="nav-link">Nos Packs</a>
-                <a href="index.html#temoignages" class="nav-link">Témoignages</a>
+                <!-- <a href="index.html#temoignages" class="nav-link">Témoignages</a> -->
                 <a href="index.html#apropos" class="nav-link">À propos</a>
                 <a href="index.html#ctaSection" class="nav-link">Contact</a>
             </div>
@@ -215,13 +215,13 @@
                 </div>
 
                 <!-- TÉMOIGNAGES & AVIS -->
-                <div class="sitemap-category">
+                <!-- <div class="sitemap-category">
                     <h2>Témoignages</h2>
                     <ul class="sitemap-list">
                         <li><a href="index.html#temoignages">Avis clients</a></li>
                         <li><a href="index.html#temoignages">Cas de succès</a></li>
                     </ul>
-                </div>
+                </div> -->
 
                 <!-- FAQ -->
                 <div class="sitemap-category">
@@ -309,7 +309,7 @@
                     <h3 class="footer-title">Liens Utiles</h3>
                     <ul class="footer-links">
                         <li><a href="#apropos">À propos</a></li>
-                        <li><a href="#temoignages">Témoignages</a></li>
+                        <!-- <li><a href="#temoignages">Témoignages</a></li> -->
                         <!-- <li><a href="#blog">Blog</a></li> -->
                         <li><a href="#faq">FAQ</a></li>
                         <li><a href="./mentions_legales.html">Mentions légales</a></li>
