changement favicon a la racine avant indexation

--- a/index.html
+++ b/index.html
@@ -97,20 +97,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
 
-    <!-- ======= Favicons (optionnels) ======= -->
-    <!--
-    <link rel="icon" href="https://www.oze-communication.fr/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="https://www.oze-communication.fr/apple-touch-icon.png" />
-    -->
-
     <!-- ======= Theme color for mobile browsers ======= -->
     <meta name="theme-color" content="#ffffff">
 
     <!-- ======= Favicons ======= -->
-    <link rel="icon" type="image/png" href="/images/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/svg+xml" href="/images/favicon.svg" />
-    <link rel="shortcut icon" href="/images/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png" />
+    <link rel="icon" href="/favicon.ico" sizes="any" />
+    <link rel="icon" href="/images/favicon.svg" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="/images/apple-touch-icon.png" />
     <meta name="apple-mobile-web-app-title" content="Ozé Communication" />
     <link rel="manifest" href="/site.webmanifest" />
 
